<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/account"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/setting_Textview_Username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10sp"
                android:text="user Name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp" >

                <TextView
                    android:id="@+id/setting_txt_changepassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="CHANGE PASSWORD"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_text" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/general"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <View
                android:id="@+id/View01"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:weightSum="2" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.75"
                    android:text="@string/soundeffect"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <CheckBox
                    android:id="@+id/setting_CheckBox_soundEffect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:text="@string/advanced"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/FontSize"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15sp"
                    android:gravity="center"
                    android:text="16PT"
                    android:textColor="@color/bg"
                    android:textSize="@dimen/btn_text" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:weightSum="2" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.75"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allowLocation"
                        android:textColor="@color/bg"
                        android:textSize="@dimen/btn_text" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/setting_CheckBox_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:id="@+id/setting_Textview_Version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="1.0.0"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helpterm"
                    android:textColor="@color/bg"
                    android:textSize="@dimen/btn_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>