<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="10sp"
    android:paddingRight="10sp"
    android:paddingTop="10sp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/transparent" >

        <LinearLayout
            android:id="@+id/addfeed_rel_lin_rateaddbg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rate_addfeed_bg"
            android:orientation="vertical"
            android:paddingLeft="10sp"
            android:paddingRight="10sp" >

            <AutoCompleteTextView
                android:id="@+id/addfeed_txt_autolocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                
                android:hint="@string/feed_location"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/black" />

            <AutoCompleteTextView
                android:id="@+id/addfeed_edt_itemname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/feed_itemname"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/black" />

            <EditText
                android:id="@+id/addfeed_edt_expiriance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/feed_shareexpiriance"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:weightSum="2" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dip" >

                    <ImageView
                        android:id="@+id/addfeed_img_fbshare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/addfeed_icon_right" />

                    <TextView
                        android:id="@+id/addfeed_txt_fbshare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dip"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/feed_sharefb"
                        android:textColor="@color/black"
                        android:textSize="10sp" />
                </LinearLayout>

                <View
                    android:id="@+id/textView3"
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dip" >

                    <TextView
                        android:id="@+id/addfeed_txt_googleshare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/feed_sharegoogle"
                        android:textColor="@color/black"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/addfeed_rel_lin_rateaddbg"
            android:layout_weight="1"
            android:background="@drawable/addimage_uplodimage"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/addfeed_txt_categoryname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/addfeed_img_cpture"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent" >

            <ImageView
                android:id="@+id/addfeed_img_selectedrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="55dip" />

            <com.android.ytoi.rateark.ArcMenu
                android:id="@+id/explorer_arc_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" >
            </com.android.ytoi.rateark.ArcMenu>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>