<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/homemain_Relativelayout_includeHeader"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/homemain_Relativelayout_main"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/images" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/placeprofile_topimg_transfernt"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/personalprofile_TextView_checkin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/checkins"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/personalprofile_TextView_checkin_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="20"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/personalprofile_TextView_takes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/takes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/personalprofile_TextView_takes_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="20"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" >

                <ImageView
                    android:id="@+id/personalprofile_ImageView_userImage"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="0.50"
                    android:padding="5dp"
                    android:src="@drawable/no_image" />

                <RelativeLayout
                    android:id="@+id/RelativeLayout2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/personalprofile_TextView_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="AGNI KAPOOR"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/personalprofile_TextView_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="MUMBAI"
                            android:textColor="@color/black"
                            android:textSize="@dimen/btn_text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:weightSum="2" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/follow_btn_bg"
                            android:padding="5dp" >

                            <TextView
                                android:id="@+id/personalprofile_TextView_follower"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textColor="@color/black"
                                android:textSize="4pt" />

                            <TextView
                                android:id="@+id/personalprofile_TextView_follower_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="2dp"
                                android:text="1"
                                android:textColor="@color/black"
                                android:textSize="4pt" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/follow_btn_bg"
                            android:padding="5dp" >

                            <TextView
                                android:id="@+id/personalprofile_TextView_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textColor="@color/black"
                                android:textSize="4pt" />

                            <TextView
                                android:id="@+id/personalprofile_TextView_following_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="2dp"
                                android:text="1"
                                android:textColor="@color/black"
                                android:textSize="4pt" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
 <LinearLayout
            android:layout_width="100dip"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical" >
                <ImageView
                    android:id="@+id/personalprofile_ImageView_editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/userprofile_rookie"
                    android:padding="5dp"
                     />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <ListView
            android:id="@+id/personalprofile_Listview_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="1dp"
            android:listSelector="@android:color/transparent" >
        </ListView>
    </LinearLayout>

</RelativeLayout>